chaged css, fixed bug with text overflowing

--- a/client/styles/Article.module.css
+++ b/client/styles/Article.module.css
@@ -1,107 +1,107 @@
 .article__regular {
-    background: var(--clr-main);
-    min-height: 194px;
-    margin-bottom: 0.5rem;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+  background: var(--clr-main);
+  min-height: 194px;
+  margin-bottom: 0.5rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .article__votes {
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-    margin-left: 6px;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  margin-left: 6px;
 }
 
 .article__votes svg {
-    padding: 4px;
-    margin-bottom: 5px;
-    width: 25px !important;
-    height: 25px !important;
+  padding: 4px;
+  margin-bottom: 5px;
+  width: 25px !important;
+  height: 25px !important;
 }
-
 
 .article__edit svg,
 .article__delete svg {
-    margin: 0 .5rem;
+  margin: 0 0.5rem;
 }
 .article__modify svg {
-    margin: 0 7px;
+  margin: 0 7px;
 }
 .article__delete svg:hover {
-    color: var(--clr-background);
-    /*color: #a59d9d;*/
-    /*margin-bottom: 5px;*/
-    /*width: 2em !important;*/
+  color: var(--clr-background);
+  /*color: #a59d9d;*/
+  /*margin-bottom: 5px;*/
+  /*width: 2em !important;*/
 }
 
 .article__edit svg:hover {
-    /*color: #3BA55D;*/
+  /*color: #3BA55D;*/
 }
 .article__modify svg:hover {
-    cursor: pointer;
-    color: var(--clr-background);
+  cursor: pointer;
+  color: var(--clr-background);
 }
 
 .article__rounded {
-    border-top-right-radius: 15px;
-    border-top-left-radius: 15px;
+  border-top-right-radius: 15px;
+  border-top-left-radius: 15px;
 }
 
 .article__votes__icon {
-    font-weight: bold;
-    color: var(--clr-white);
-    background: var(--clr-purple);
-    border-radius: 30px;
-    margin: 0 auto;
+  font-weight: bold;
+  color: var(--clr-white);
+  background: var(--clr-purple);
+  border-radius: 30px;
+  margin: 0 auto;
 }
 
 .article__main {
-    padding: 1.5rem 1.5rem 1rem 1.5rem;
-    display: flex;
-    justify-content: space-between;
+  padding: 1.5rem 1.5rem 1rem 1.5rem;
+  display: flex;
+  justify-content: space-between;
 }
 
 .article__title {
-    flex: 1;
+  overflow: hidden;
+  word-wrap: break-word;
+  flex: 1;
 }
 
 .article__information {
-    display: flex;
-    justify-content: space-between;
-    padding: 0 1.5rem 0 1.5rem;
-    margin-bottom: 0.5rem;
+  display: flex;
+  justify-content: space-between;
+  padding: 0 1.5rem 0 1.5rem;
+  margin-bottom: 0.5rem;
 }
 
 .article__small__text {
-    font-size: clamp(10px, 2vw, 1.3rem);
+  font-size: clamp(10px, 2vw, 1.3rem);
 }
 
 .article__information__icon {
-    padding-right: 0.5rem;
-    width: 2em !important;
+  padding-right: 0.5rem;
+  width: 2em !important;
 }
 
-.article__inputs__wrapper
-{
-    height: 100%;
-    flex: 1 1 auto;
-    margin: 0 auto;
-    display: block;
+.article__inputs__wrapper {
+  height: 100%;
+  flex: 1 1 auto;
+  margin: 0 auto;
+  display: block;
 }
 
-.article__inputs__wrapper input{
-    display: block;
+.article__inputs__wrapper input {
+  display: block;
 }
 
 @media (max-width: 600px) {
-    .article__small__text {
-        font-size: clamp(12px, 1vw, 1rem);
-    }
+  .article__small__text {
+    font-size: clamp(12px, 1vw, 1rem);
+  }
 
-    .article__information svg {
-        display: block;
-        margin: 0 auto 8px auto;
-    }
+  .article__information svg {
+    display: block;
+    margin: 0 auto 8px auto;
+  }
 }
